<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing8">

    <Button
        android:id="@+id/clear_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_selection"
        app:layout_constraintBottom_toBottomOf="@+id/add_video"
        app:layout_constraintEnd_toStartOf="@+id/add_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_video" />

    <Button
        android:id="@+id/add_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing8"
        android:text="@string/select_video"
        app:layout_constraintEnd_toStartOf="@id/add_image"
        app:layout_constraintStart_toEndOf="@id/clear_selection"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing8"
        android:text="@string/select_image"
        app:layout_constraintBottom_toBottomOf="@+id/add_video"
        app:layout_constraintStart_toEndOf="@+id/add_video"
        app:layout_constraintTop_toTopOf="@+id/add_video" />

    <Button
        android:id="@+id/transfer"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/spacing8"
        android:layout_height="wrap_content"
        android:text="@string/transfer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_selection" />


    <TextView
        android:id="@+id/selected_media"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/spacing8"
        android:layout_marginEnd="@dimen/spacing8"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/transfer"
        app:layout_constraintTop_toTopOf="@+id/transfer"
        tools:text="ssefesfef" />

</androidx.constraintlayout.widget.ConstraintLayout>